Add camera-based air detection with configurable zone overlay
- Replace all touch/gyro/accel input with CameraX camera feed
- Add ZoneOverlayView with 6 red/green detection zones
- Add front/rear camera toggle
- Add ROI settings (X position, Y position, width, spacing)
- Remove LED rendering, vibration, touch slider entirely
- Clean up BrokenithmApplication, SettingsFragment, preferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="enable_touch_size">Enable Touch Size Check</string>
     <string name="enable_nfc">Enable NFC</string>
     <string name="enable_vibrate">Enable Vibration</string>
+
+    <string name="debug_info_camera">Air: %1$d | Zones: %2$s</string>
 </resources>
