Change application ID and app name for multi-app coexistence

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Brokenithm</string>
+    <string name="app_name">Brokenithm Hands</string>
 
     <string name="title">Brokenithm-Evolved</string>
     <string name="start">Start</string>
